@@ -1,5 +1,6 @@
 package org.apereo.cas.logout;
 
+import org.apereo.cas.logout.slo.SingleLogoutExecutionRequest;
 import org.apereo.cas.logout.slo.SingleLogoutMessageCreator;
 import org.apereo.cas.mock.MockTicketGrantingTicket;
 import org.apereo.cas.services.RegisteredService;
@@ -12,7 +13,7 @@ import org.junit.jupiter.api.Test;
 import javax.xml.parsers.DocumentBuilderFactory;
 
 import java.io.ByteArrayInputStream;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -29,10 +30,10 @@ class SamlCompliantLogoutMessageCreatorTests {
     private final SingleLogoutMessageCreator builder = new DefaultSingleLogoutMessageCreator();
 
     @Test
-    void verifyMessageBuilding() throws Exception {
+    void verifyMessageBuilding() throws Throwable {
 
         val service = RegisteredServiceTestUtils.getService(TEST_URL);
-        val logoutUrl = new URL(service.getOriginalUrl());
+        val logoutUrl = new URI(service.getOriginalUrl()).toURL();
         val request = DefaultSingleLogoutRequestContext.builder()
             .ticketId("TICKET-ID")
             .service(service)
