@@ -19,15 +19,14 @@ import org.apereo.cas.services.consent.DefaultRegisteredServiceConsentPolicy;
 import org.apereo.cas.services.support.RegisteredServiceRegexAttributeFilter;
 import org.apereo.cas.util.CollectionUtils;
 import org.apereo.cas.util.RandomUtils;
+import org.apereo.cas.util.function.FunctionUtils;
 import com.google.common.base.Splitter;
 import com.google.common.collect.Iterables;
 import lombok.experimental.UtilityClass;
 import lombok.val;
 import org.jooq.lambda.Unchecked;
 import org.springframework.mock.web.MockHttpServletRequest;
-import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -60,8 +59,8 @@ public class RegisteredServiceTestUtils {
     public static HttpBasedServiceCredential getHttpBasedServiceCredentials(final String url) {
         try {
             val service = (CasModelRegisteredService) RegisteredServiceTestUtils.getRegisteredService(url);
-            return new HttpBasedServiceCredential(new URL(url), service);
-        } catch (final MalformedURLException e) {
+            return new HttpBasedServiceCredential(new URI(url).toURL(), service);
+        } catch (final Exception e) {
             throw new IllegalArgumentException();
         }
     }
@@ -196,7 +195,7 @@ public class RegisteredServiceTestUtils {
         return Unchecked.supplier(() -> getRegisteredService(id, CasRegisteredService.class, true, requiredAttributes)).get();
     }
 
-    public static Principal getPrincipal() {
+    public static Principal getPrincipal() throws Throwable {
         return getPrincipal(CONST_USERNAME);
     }
 
@@ -205,7 +204,7 @@ public class RegisteredServiceTestUtils {
     }
 
     public static Principal getPrincipal(final String name, final Map<String, List<Object>> attributes) {
-        return PrincipalFactoryUtils.newPrincipalFactory().createPrincipal(name, attributes);
+        return FunctionUtils.doUnchecked(() -> PrincipalFactoryUtils.newPrincipalFactory().createPrincipal(name, attributes));
     }
 
     public static Authentication getAuthentication() {
