@@ -10,9 +10,7 @@ import org.apereo.cas.util.CollectionUtils;
 import org.apereo.cas.util.LoggingUtils;
 import org.apereo.cas.util.serialization.JacksonObjectMapperFactory;
 import org.apereo.cas.util.spring.SpringExpressionLanguageValueResolver;
-
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.Maps;
 import com.microsoft.aad.msal4j.ClientCredentialFactory;
 import com.microsoft.aad.msal4j.ClientCredentialParameters;
 import com.microsoft.aad.msal4j.ConfidentialClientApplication;
@@ -26,13 +24,12 @@ import org.apache.commons.lang3.StringUtils;
 import org.hjson.JsonValue;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
-
 import javax.security.auth.login.FailedLoginException;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
-import java.security.GeneralSecurityException;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -58,7 +55,7 @@ public class AzureActiveDirectoryAuthenticationHandler extends AbstractUsernameP
     }
 
     private String getUserInfoFromGraph(final IAuthenticationResult authenticationResult, final String username) throws Exception {
-        val url = new URL(StringUtils.appendIfMissing(properties.getResource(), "/") + "v1.0/users/" + username);
+        val url = new URI(StringUtils.appendIfMissing(properties.getResource(), "/") + "v1.0/users/" + username).toURL();
         val conn = (HttpURLConnection) url.openConnection();
 
         conn.setRequestMethod("GET");
@@ -106,8 +103,7 @@ public class AzureActiveDirectoryAuthenticationHandler extends AbstractUsernameP
 
     @Override
     protected AuthenticationHandlerExecutionResult authenticateUsernamePasswordInternal(final UsernamePasswordCredential credential,
-                                                                                        final String originalPassword)
-        throws GeneralSecurityException {
+                                                                                        final String originalPassword) throws Throwable {
 
         try {
             val username = credential.getUsername();
@@ -117,7 +113,7 @@ public class AzureActiveDirectoryAuthenticationHandler extends AbstractUsernameP
             val userInfo = getUserInfoFromGraph(result, username);
             LOGGER.trace("Retrieved user info [{}]", userInfo);
             val userInfoMap = (Map<String, ?>) MAPPER.readValue(JsonValue.readHjson(userInfo).toString(), Map.class);
-            val attributeMap = Maps.<String, List<Object>>newHashMapWithExpectedSize(userInfoMap.size());
+            val attributeMap = new HashMap<String, List<Object>>(userInfoMap.size());
             userInfoMap.forEach((key, value) -> {
                 val values = CollectionUtils.toCollection(value, ArrayList.class);
                 if (!values.isEmpty()) {
