@@ -16,10 +16,10 @@ import static org.junit.jupiter.api.Assertions.*;
 @Tag("WebApp")
 public class CasSpringBootAdminServerInitializerTests {
     @Test
-    void verifyOperation() throws Exception {
+    void verifyOperation() throws Throwable {
         val initializers = ApplicationUtils.getApplicationEntrypointInitializers();
         assertFalse(initializers.isEmpty());
-        val initializer = (CasSpringBootAdminServerInitializer) initializers.get(0);
+        val initializer = (CasSpringBootAdminServerInitializer) initializers.getFirst();
         assertNotNull(initializer);
         assertFalse(initializer.getApplicationSources(ArrayUtils.EMPTY_STRING_ARRAY).isEmpty());
     }
