@@ -46,7 +46,7 @@ public class CosmosDbServiceRegistry extends AbstractServiceRegistry {
     @Override
     public RegisteredService save(final RegisteredService registeredService) {
         invokeServiceRegistryListenerPreSave(registeredService);
-        if (registeredService.getId() == RegisteredService.INITIAL_IDENTIFIER_VALUE) {
+        if (registeredService.getId() == RegisteredServiceDefinition.INITIAL_IDENTIFIER_VALUE) {
             registeredService.setId(System.currentTimeMillis());
             insert(registeredService);
         } else {
@@ -101,7 +101,7 @@ public class CosmosDbServiceRegistry extends AbstractServiceRegistry {
                 .sorted()
                 .filter(r -> r.matches(id))
                 .peek(this::invokeServiceRegistryListenerPostLoad).toList()));
-        return services.isEmpty() ? null : services.get(0);
+        return services.isEmpty() ? null : services.getFirst();
     }
 
     @Override
