@@ -5,7 +5,6 @@ import org.apereo.cas.configuration.CasConfigurationProperties;
 import org.apereo.cas.monitor.Monitorable;
 import org.apereo.cas.util.app.ApplicationEntrypointInitializer;
 import org.apereo.cas.util.junit.EnabledIfListeningOnPort;
-
 import lombok.val;
 import org.apache.commons.lang3.ArrayUtils;
 import org.junit.jupiter.api.Tag;
@@ -13,15 +12,15 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.boot.autoconfigure.aop.AopAutoConfiguration;
+import org.springframework.boot.autoconfigure.web.servlet.WebMvcAutoConfiguration;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
+import org.springframework.boot.test.autoconfigure.actuate.observability.AutoConfigureObservability;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.cloud.autoconfigure.RefreshAutoConfiguration;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.EnableAspectJAutoProxy;
-
 import java.util.ServiceLoader;
-
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
@@ -32,6 +31,7 @@ import static org.junit.jupiter.api.Assertions.*;
  */
 @SpringBootTest(classes = {
     RefreshAutoConfiguration.class,
+    WebMvcAutoConfiguration.class,
     AopAutoConfiguration.class,
     ElasticApmConfiguration.class,
     ElasticApmAgentInitializerTests.ElasticApmTestConfiguration.class
@@ -40,6 +40,7 @@ import static org.junit.jupiter.api.Assertions.*;
 @EnabledIfListeningOnPort(port = 8800)
 @EnableAspectJAutoProxy
 @Tag("Elastic")
+@AutoConfigureObservability
 class ElasticApmAgentInitializerTests {
     static {
         System.setProperty(ElasticApmAgentInitializer.SETTING_ELASTIC_APM_AGENT_ENABLED, "yes");
@@ -50,11 +51,11 @@ class ElasticApmAgentInitializerTests {
     private Greeter greeter;
 
     @Test
-    void verifyOperation() {
+    void verifyOperation() throws Throwable {
         val agent = ServiceLoader.load(ApplicationEntrypointInitializer.class).stream()
             .map(ServiceLoader.Provider::get)
             .toList()
-            .get(0);
+            .getFirst();
         assertDoesNotThrow(() -> agent.initialize(ArrayUtils.EMPTY_STRING_ARRAY));
         assertNotNull(greeter.greet(false));
         assertThrows(IllegalArgumentException.class, () -> greeter.greet(true));
