@@ -13,12 +13,12 @@ import org.apereo.cas.support.oauth.OAuth20Constants;
 import org.apereo.cas.support.oauth.OAuth20ResponseTypes;
 import org.apereo.cas.support.oauth.services.DefaultRegisteredServiceOAuthAccessTokenExpirationPolicy;
 import org.apereo.cas.support.oauth.services.OAuthRegisteredService;
-import org.apereo.cas.ticket.ServiceTicketSessionTrackingPolicy;
 import org.apereo.cas.ticket.TicketGrantingTicket;
 import org.apereo.cas.ticket.accesstoken.OAuth20AccessToken;
 import org.apereo.cas.ticket.code.OAuth20Code;
+import org.apereo.cas.ticket.tracking.TicketTrackingPolicy;
 import org.apereo.cas.util.CollectionUtils;
-import org.apereo.cas.util.HttpRequestUtils;
+import org.apereo.cas.util.http.HttpRequestUtils;
 import org.apereo.cas.web.flow.CasWebflowConstants;
 import lombok.val;
 import org.apache.commons.lang3.StringUtils;
@@ -66,7 +66,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
     private OAuth20AuthorizeEndpointController oAuth20AuthorizeEndpointController;
 
     @Test
-    void verifyNoClientId() {
+    void verifyNoClientId() throws Throwable {
         val mockRequest = new MockHttpServletRequest(HttpMethod.GET.name(), CONTEXT + OAuth20Constants.AUTHORIZE_URL);
         mockRequest.setParameter(OAuth20Constants.REDIRECT_URI, REDIRECT_URI);
         val mockResponse = new MockHttpServletResponse();
@@ -74,7 +74,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    void verifyNoRedirectUri() {
+    void verifyNoRedirectUri() throws Throwable {
         val registeredService = addRegisteredService();
         val mockRequest = new MockHttpServletRequest(HttpMethod.GET.name(), CONTEXT + OAuth20Constants.AUTHORIZE_URL);
         mockRequest.setParameter(OAuth20Constants.CLIENT_ID, registeredService.getClientId());
@@ -83,7 +83,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    void verifyNoResponseType() {
+    void verifyNoResponseType() throws Throwable {
         val registeredService = addRegisteredService();
         val mockRequest = new MockHttpServletRequest(HttpMethod.GET.name(), CONTEXT + OAuth20Constants.AUTHORIZE_URL);
         mockRequest.setParameter(OAuth20Constants.CLIENT_ID, registeredService.getClientId());
@@ -93,7 +93,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    void verifyBadResponseType() throws Exception {
+    void verifyBadResponseType() throws Throwable {
         val registeredService = addRegisteredService();
 
         val mockRequest = new MockHttpServletRequest(HttpMethod.GET.name(), CONTEXT + OAuth20Constants.AUTHORIZE_URL);
@@ -105,7 +105,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
         val mockResponse = new MockHttpServletResponse();
 
         val modelAndView = oAuth20AuthorizeEndpointController.handleRequest(mockRequest, mockResponse);
-        assertTrue(modelAndView.getView() instanceof RedirectView);
+        assertInstanceOf(RedirectView.class, modelAndView.getView());
         val modelView = (RedirectView) modelAndView.getView();
         assertEquals(REDIRECT_URI, modelView.getUrl());
 
@@ -114,7 +114,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    void verifyNoCasService() {
+    void verifyNoCasService() throws Throwable {
         clearAllServices();
         val mockRequest = new MockHttpServletRequest(HttpMethod.GET.name(), CONTEXT + OAuth20Constants.AUTHORIZE_URL);
         mockRequest.setParameter(OAuth20Constants.CLIENT_ID, UUID.randomUUID().toString());
@@ -124,7 +124,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    void verifyCasClientCanValidate() throws Exception {
+    void verifyCasClientCanValidate() throws Throwable {
         clearAllServices();
 
         val service = getRegisteredService(REDIRECT_URI, SERVICE_NAME);
@@ -148,7 +148,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
         val tgt = new MockTicketGrantingTicket(UUID.randomUUID().toString());
         ticketRegistry.addTicket(tgt);
 
-        val trackingPolicy = mock(ServiceTicketSessionTrackingPolicy.class);
+        val trackingPolicy = mock(TicketTrackingPolicy.class);
         val ticketService = RegisteredServiceTestUtils.getService(REDIRECT_URI);
         ticketService.getAttributes().put(OAuth20Constants.CLIENT_ID, List.of(service.getClientId()));
         val st1 = tgt.grantServiceTicket(ticketService, trackingPolicy);
@@ -169,7 +169,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    void verifyRedirectUriDoesNotStartWithServiceId() {
+    void verifyRedirectUriDoesNotStartWithServiceId() throws Throwable {
         clearAllServices();
         val registeredService = getRegisteredService(OTHER_REDIRECT_URI, UUID.randomUUID().toString());
         servicesManager.save(registeredService);
@@ -183,7 +183,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    void verifyCodeNoProfile() {
+    void verifyCodeNoProfile() throws Throwable {
         clearAllServices();
 
         val service = getRegisteredService(REDIRECT_URI, SERVICE_NAME);
@@ -206,7 +206,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    void verifyMissingTicketGrantingTicket() throws Exception {
+    void verifyMissingTicketGrantingTicket() throws Throwable {
         clearAllServices();
 
         val service = getRegisteredService(REDIRECT_URI, SERVICE_NAME);
@@ -238,7 +238,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    void verifyServiceAccessDenied() throws Exception {
+    void verifyServiceAccessDenied() throws Throwable {
         clearAllServices();
 
         val service = getRegisteredService(REDIRECT_URI, SERVICE_NAME);
@@ -273,7 +273,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    void verifyCodeRedirectToClient() throws Exception {
+    void verifyCodeRedirectToClient() throws Throwable {
         clearAllServices();
         val service = getRegisteredService(REDIRECT_URI, SERVICE_NAME);
         service.setBypassApprovalPrompt(true);
@@ -306,7 +306,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
 
         val modelAndView = oAuth20AuthorizeEndpointController.handleRequest(mockRequest, mockResponse);
         val view = modelAndView.getView();
-        assertTrue(view instanceof RedirectView);
+        assertInstanceOf(RedirectView.class, view);
         val redirectView = (RedirectView) view;
         val redirectUrl = redirectView.getUrl();
         assertNotNull(redirectUrl);
@@ -321,11 +321,11 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
         assertEquals(ID, principal.getId());
         val principalAttributes = principal.getAttributes();
         assertEquals(profile.getAttributes().size(), principalAttributes.size());
-        assertEquals(FIRST_NAME, principalAttributes.get(FIRST_NAME_ATTRIBUTE).get(0));
+        assertEquals(FIRST_NAME, principalAttributes.get(FIRST_NAME_ATTRIBUTE).getFirst());
     }
 
     @Test
-    void verifyTokenRedirectToClient() throws Exception {
+    void verifyTokenRedirectToClient() throws Throwable {
         clearAllServices();
 
         val service = getRegisteredService(REDIRECT_URI, SERVICE_NAME);
@@ -355,7 +355,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
 
         val modelAndView = oAuth20AuthorizeEndpointController.handleRequest(mockRequest, mockResponse);
         val view = modelAndView.getView();
-        assertTrue(view instanceof RedirectView);
+        assertInstanceOf(RedirectView.class, view);
         val redirectView = (RedirectView) view;
         val redirectUrl = redirectView.getUrl();
         assertNotNull(redirectUrl);
@@ -370,13 +370,13 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
         assertEquals(ID, principal.getId());
         val principalAttributes = principal.getAttributes();
         assertEquals(profile.getAttributes().size(), principalAttributes.size());
-        assertEquals(FIRST_NAME, principalAttributes.get(FIRST_NAME_ATTRIBUTE).get(0));
+        assertEquals(FIRST_NAME, principalAttributes.get(FIRST_NAME_ATTRIBUTE).getFirst());
         val expiresIn = StringUtils.substringAfter(redirectUrl, "&expires_in=");
         assertEquals(getDefaultAccessTokenExpiration(), Long.parseLong(expiresIn));
     }
 
     @Test
-    void verifyPerServiceExpiration() throws Exception {
+    void verifyPerServiceExpiration() throws Throwable {
         clearAllServices();
 
         val service = getRegisteredService(REDIRECT_URI, SERVICE_NAME);
@@ -407,7 +407,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
 
         val modelAndView = oAuth20AuthorizeEndpointController.handleRequest(mockRequest, mockResponse);
         val view = modelAndView.getView();
-        assertTrue(view instanceof RedirectView);
+        assertInstanceOf(RedirectView.class, view);
         val redirectView = (RedirectView) view;
         val redirectUrl = redirectView.getUrl();
         assertNotNull(redirectUrl);
@@ -430,7 +430,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    void verifyCodeRedirectToClientWithState() throws Exception {
+    void verifyCodeRedirectToClientWithState() throws Throwable {
         clearAllServices();
 
         val service = getRegisteredService(REDIRECT_URI, SERVICE_NAME);
@@ -458,7 +458,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
 
         val modelAndView = oAuth20AuthorizeEndpointController.handleRequest(mockRequest, mockResponse);
         val view = modelAndView.getView();
-        assertTrue(view instanceof RedirectView);
+        assertInstanceOf(RedirectView.class, view);
         val redirectView = (RedirectView) view;
         val redirectUrl = redirectView.getUrl();
         assertNotNull(redirectUrl);
@@ -472,11 +472,11 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
         assertEquals(ID, principal.getId());
         val principalAttributes = principal.getAttributes();
         assertEquals(profile.getAttributes().size(), principalAttributes.size());
-        assertEquals(FIRST_NAME, principalAttributes.get(FIRST_NAME_ATTRIBUTE).get(0));
+        assertEquals(FIRST_NAME, principalAttributes.get(FIRST_NAME_ATTRIBUTE).getFirst());
     }
 
     @Test
-    void verifyTokenRedirectToClientWithState() throws Exception {
+    void verifyTokenRedirectToClientWithState() throws Throwable {
         clearAllServices();
 
         val service = getRegisteredService(REDIRECT_URI, SERVICE_NAME);
@@ -504,7 +504,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
 
         val modelAndView = oAuth20AuthorizeEndpointController.handleRequest(mockRequest, mockResponse);
         val view = modelAndView.getView();
-        assertTrue(view instanceof RedirectView);
+        assertInstanceOf(RedirectView.class, view);
         val redirectView = (RedirectView) view;
         var redirectUrl = redirectView.getUrl();
         assertNotNull(redirectUrl);
@@ -520,11 +520,11 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
         assertEquals(ID, principal.getId());
         val principalAttributes = principal.getAttributes();
         assertEquals(profile.getAttributes().size(), principalAttributes.size());
-        assertEquals(FIRST_NAME, principalAttributes.get(FIRST_NAME_ATTRIBUTE).get(0));
+        assertEquals(FIRST_NAME, principalAttributes.get(FIRST_NAME_ATTRIBUTE).getFirst());
     }
 
     @Test
-    void verifyCodeRedirectToClientApproved() throws Exception {
+    void verifyCodeRedirectToClientApproved() throws Throwable {
         clearAllServices();
 
         val service = getRegisteredService(REDIRECT_URI, SERVICE_NAME);
@@ -551,7 +551,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
 
         val modelAndView = oAuth20AuthorizeEndpointController.handleRequest(mockRequest, mockResponse);
         val view = modelAndView.getView();
-        assertTrue(view instanceof RedirectView);
+        assertInstanceOf(RedirectView.class, view);
         val redirectView = (RedirectView) view;
         val redirectUrl = redirectView.getUrl();
         assertNotNull(redirectUrl);
@@ -564,11 +564,11 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
         assertEquals(ID, principal.getId());
         val principalAttributes = principal.getAttributes();
         assertEquals(profile.getAttributes().size(), principalAttributes.size());
-        assertEquals(FIRST_NAME, principalAttributes.get(FIRST_NAME_ATTRIBUTE).get(0));
+        assertEquals(FIRST_NAME, principalAttributes.get(FIRST_NAME_ATTRIBUTE).getFirst());
     }
 
     @Test
-    void verifyTokenRedirectToClientApproved() throws Exception {
+    void verifyTokenRedirectToClientApproved() throws Throwable {
         clearAllServices();
 
         val service = getRegisteredService(REDIRECT_URI, SERVICE_NAME);
@@ -597,7 +597,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
 
         val modelAndView = oAuth20AuthorizeEndpointController.handleRequest(mockRequest, mockResponse);
         val view = modelAndView.getView();
-        assertTrue(view instanceof RedirectView);
+        assertInstanceOf(RedirectView.class, view);
         val redirectView = (RedirectView) view;
         val redirectUrl = redirectView.getUrl();
         assertNotNull(redirectUrl);
@@ -610,11 +610,11 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
         assertEquals(ID, principal.getId());
         val principalAttributes = principal.getAttributes();
         assertEquals(profile.getAttributes().size(), principalAttributes.size());
-        assertEquals(FIRST_NAME, principalAttributes.get(FIRST_NAME_ATTRIBUTE).get(0));
+        assertEquals(FIRST_NAME, principalAttributes.get(FIRST_NAME_ATTRIBUTE).getFirst());
     }
 
     @Test
-    void verifyRedirectToApproval() throws Exception {
+    void verifyRedirectToApproval() throws Throwable {
         clearAllServices();
 
         val service = getRegisteredService(REDIRECT_URI, SERVICE_NAME);
@@ -649,7 +649,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    void verifyTokenRedirectToClientApprovedWithJwtToken() throws Exception {
+    void verifyTokenRedirectToClientApprovedWithJwtToken() throws Throwable {
         clearAllServices();
 
         val service = getRegisteredService(REDIRECT_URI, SERVICE_NAME);
@@ -680,7 +680,7 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
 
         val modelAndView = oAuth20AuthorizeEndpointController.handleRequest(mockRequest, mockResponse);
         val view = modelAndView.getView();
-        assertTrue(view instanceof RedirectView);
+        assertInstanceOf(RedirectView.class, view);
         val redirectView = (RedirectView) view;
         val redirectUrl = redirectView.getUrl();
         assertNotNull(redirectUrl);
@@ -701,10 +701,10 @@ class OAuth20AuthorizeEndpointControllerTests extends AbstractOAuth20Tests {
         assertEquals(ID, principal.getId());
         val principalAttributes = principal.getAttributes();
         assertEquals(profile.getAttributes().size(), principalAttributes.size());
-        assertEquals(FIRST_NAME, principalAttributes.get(FIRST_NAME_ATTRIBUTE).get(0));
+        assertEquals(FIRST_NAME, principalAttributes.get(FIRST_NAME_ATTRIBUTE).getFirst());
     }
 
-    protected CasProfile buildCasProfile() throws Exception {
+    protected CasProfile buildCasProfile() throws Throwable {
         val profile = new CasProfile();
         profile.setId(ID);
         val attributes = new HashMap<String, Object>();
