@@ -1,5 +1,6 @@
 package org.apereo.cas.oidc.token;
 
+import org.apereo.cas.configuration.CasConfigurationProperties;
 import org.apereo.cas.oidc.issuer.OidcIssuerService;
 import org.apereo.cas.oidc.jwks.OidcJsonWebKeyCacheKey;
 import org.apereo.cas.oidc.jwks.OidcJsonWebKeyUsage;
@@ -22,7 +23,6 @@ import org.jose4j.jwk.JsonWebKey;
 import org.jose4j.jwk.JsonWebKeySet;
 import org.jose4j.jwk.PublicJsonWebKey;
 import org.jose4j.jwt.JwtClaims;
-
 import java.util.Comparator;
 import java.util.Objects;
 import java.util.Optional;
@@ -36,20 +36,13 @@ import java.util.Optional;
 @Slf4j
 @RequiredArgsConstructor(access = AccessLevel.PROTECTED)
 public abstract class BaseOidcJsonWebKeyTokenSigningAndEncryptionService extends BaseTokenSigningAndEncryptionService {
-    /**
-     * The default keystore for OIDC tokens.
-     */
-    protected final LoadingCache<OidcJsonWebKeyCacheKey, Optional<JsonWebKeySet>> defaultJsonWebKeystoreCache;
+    protected final LoadingCache<OidcJsonWebKeyCacheKey, JsonWebKeySet> defaultJsonWebKeystoreCache;
 
-    /**
-     * The service keystore for OIDC tokens.
-     */
     protected final LoadingCache<OidcJsonWebKeyCacheKey, Optional<JsonWebKeySet>> serviceJsonWebKeystoreCache;
 
-    /**
-     * Issuer service.
-     */
     protected final OidcIssuerService issuerService;
+
+    protected final CasConfigurationProperties casProperties;
 
     @Override
     public String encode(final OAuthRegisteredService registeredService, final JwtClaims claims) {
@@ -93,7 +86,7 @@ public abstract class BaseOidcJsonWebKeyTokenSigningAndEncryptionService extends
     protected abstract String encryptToken(OAuthRegisteredService svc, String token);
 
     @Override
-    public PublicJsonWebKey getJsonWebKeySigningKey(final Optional<OAuthRegisteredService> registeredService) {
+    public PublicJsonWebKey getJsonWebKeySigningKey(final Optional<OAuthRegisteredService> registeredService) throws Throwable {
         val servicePassed = registeredService
             .filter(OidcRegisteredService.class::isInstance)
             .map(OidcRegisteredService.class::cast)
@@ -105,11 +98,11 @@ public abstract class BaseOidcJsonWebKeyTokenSigningAndEncryptionService extends
         return getJsonWebKeySigningKeyFrom(jwks, registeredService);
     }
 
-    protected PublicJsonWebKey getJsonWebKeySigningKeyFrom(final Optional<JsonWebKeySet> jwks,
-                                                           final Optional<OAuthRegisteredService> serviceResult) {
-        FunctionUtils.throwIf(jwks.isEmpty(),
+    protected PublicJsonWebKey getJsonWebKeySigningKeyFrom(final JsonWebKeySet jwks,
+                                                           final Optional<OAuthRegisteredService> serviceResult) throws Throwable {
+        FunctionUtils.throwIfNull(jwks,
             () -> new IllegalArgumentException("JSON web keystore is empty and contains no keys"));
-        val jsonWebKeys = jwks.orElseThrow().getJsonWebKeys();
+        val jsonWebKeys = jwks.getJsonWebKeys();
         LOGGER.trace("JSON web keystore contains [{}] key(s)", jsonWebKeys);
 
         val finalKey = serviceResult
@@ -125,25 +118,23 @@ public abstract class BaseOidcJsonWebKeyTokenSigningAndEncryptionService extends
                 .findFirst())
             .flatMap(Optional::stream)
             .findFirst();
-        
+
         LOGGER.debug("Located key [{}] for service [{}]", finalKey, serviceResult);
-        return finalKey.orElseGet(() -> (PublicJsonWebKey) jsonWebKeys.get(0));
+        return finalKey.orElseGet(() -> (PublicJsonWebKey) jsonWebKeys.getFirst());
     }
 
-    /**
-     * Gets json web key for encryption.
-     *
-     * @param svc the svc
-     * @return the json web key for encryption
-     */
-    protected PublicJsonWebKey getJsonWebKeyForEncryption(final OAuthRegisteredService svc) {
-        LOGGER.debug("Service [{}] is set to encrypt tokens", svc);
-        val jwks = serviceJsonWebKeystoreCache.get(new OidcJsonWebKeyCacheKey(svc, OidcJsonWebKeyUsage.ENCRYPTION));
-        if (Objects.requireNonNull(jwks).isEmpty()) {
-            throw new IllegalArgumentException(
-                "Service " + svc.getServiceId()
-                    + " with client id " + svc.getClientId()
-                    + " is configured to encrypt tokens, yet no JSON web key is available to handle encryption");
+    protected PublicJsonWebKey getJsonWebKeyForEncryption(final OAuthRegisteredService registeredService) {
+        LOGGER.debug("Service [{}] is set to encrypt tokens", registeredService);
+        val oidcService = (OidcRegisteredService) registeredService;
+        val jwks = serviceJsonWebKeystoreCache.get(new OidcJsonWebKeyCacheKey(registeredService, OidcJsonWebKeyUsage.ENCRYPTION));
+        if (jwks.isEmpty()) {
+            val message = "Service %s with client id %s is configured to encrypt tokens, yet no JSON web key is available to handle encryption"
+                .formatted(registeredService.getServiceId(), registeredService.getClientId());
+            if (oidcService.isIdTokenEncryptionOptional()) {
+                LOGGER.info(message);
+                return null;
+            }
+            throw new IllegalArgumentException(message);
         }
         val jsonWebKey = jwks.get()
             .getJsonWebKeys()
