@@ -16,6 +16,7 @@ import org.mockito.MockitoAnnotations;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.context.ConfigurableApplicationContext;
 
 import javax.sql.DataSource;
 
@@ -33,6 +34,9 @@ public abstract class BaseJdbcAttributeRepositoryTests {
     @Qualifier(PrincipalResolver.BEAN_NAME_ATTRIBUTE_REPOSITORY)
     protected IPersonAttributeDao attributeRepository;
 
+    @Autowired
+    protected ConfigurableApplicationContext applicationContext;
+
     protected DataSource dataSource;
 
     @Autowired
@@ -47,7 +51,7 @@ public abstract class BaseJdbcAttributeRepositoryTests {
     @BeforeEach
     public void setupDatabase() throws Exception {
         MockitoAnnotations.openMocks(this).close();
-        this.dataSource = JpaBeans.newDataSource(casProperties.getAuthn().getAttributeRepository().getJdbc().get(0));
+        this.dataSource = JpaBeans.newDataSource(casProperties.getAuthn().getAttributeRepository().getJdbc().getFirst());
         @Cleanup
         val connection = dataSource.getConnection();
         @Cleanup
