@@ -46,7 +46,7 @@ public class SurrogateAuthenticationRestHttpRequestCredentialFactory extends Use
     }
 
     @Override
-    public List<Credential> fromRequest(final HttpServletRequest request, final MultiValueMap<String, String> requestBody) {
+    public List<Credential> fromRequest(final HttpServletRequest request, final MultiValueMap<String, String> requestBody) throws Throwable {
         val credentials = super.fromRequest(request, requestBody);
         if (credentials.isEmpty()) {
             return credentials;
@@ -64,12 +64,12 @@ public class SurrogateAuthenticationRestHttpRequestCredentialFactory extends Use
             throw new SurrogateAuthenticationException(
                 "Unable to authorize surrogate authentication request for " + surrogateUsername);
         }
-        return CollectionUtils.wrapList(credential);
+        return CollectionUtils.wrapList(prepareCredential(request, credential));
     }
 
-    protected Credential extractCredential(final HttpServletRequest request,
+    protected MutableCredential extractCredential(final HttpServletRequest request,
                                            final List<Credential> credentials) throws Exception {
-        val credential = (MutableCredential) credentials.get(0);
+        val credential = (MutableCredential) credentials.getFirst();
         if (credential != null) {
             var surrogateUsername = request.getHeader(REQUEST_HEADER_SURROGATE_PRINCIPAL);
             if (StringUtils.isNotBlank(surrogateUsername)) {
